Add launcher icons

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -4,27 +4,40 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
+  <group android:scaleX="0.75"
+      android:scaleY="0.75"
+      android:translateX="13.5"
+      android:translateY="13.5">
+    <group>
+      <clip-path
+          android:pathData="M0,0h108v108h-108z"/>
+      <path
+          android:pathData="M108,0H0V108H108V0Z">
         <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
+          <gradient
+              android:centerX="5400"
+              android:centerY="5400"
+              android:gradientRadius="8640"
+              android:type="radial">
+            <item android:offset="0" android:color="#FF8E82FF"/>
+            <item android:offset="1" android:color="#FF6A5BE2"/>
+          </gradient>
         </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+      </path>
+      <path
+          android:pathData="M64.78,32.74L35.23,37.95C31.97,38.53 29.79,41.64 30.37,44.9L37.31,84.3C37.89,87.56 41,89.74 44.26,89.16L73.81,83.95C77.07,83.38 79.25,80.27 78.67,77L71.73,37.61C71.15,34.35 68.04,32.17 64.78,32.74Z"
+          android:strokeAlpha="0.85"
+          android:fillColor="#ffffff"
+          android:fillAlpha="0.85"/>
+      <path
+          android:pathData="M48.54,70.13L45,50.08L53.03,48.66C54.51,48.4 55.78,48.4 56.84,48.67C57.9,48.93 58.75,49.41 59.38,50.1C60.01,50.78 60.42,51.62 60.6,52.63C60.73,53.41 60.7,54.13 60.49,54.78C60.28,55.42 59.94,55.98 59.45,56.46C58.98,56.92 58.4,57.3 57.73,57.58L57.77,57.77C58.54,57.67 59.29,57.76 60.03,58.04C60.77,58.32 61.41,58.78 61.96,59.43C62.5,60.06 62.86,60.88 63.03,61.86C63.22,62.93 63.12,63.92 62.74,64.85C62.37,65.77 61.71,66.57 60.77,67.23C59.83,67.89 58.61,68.36 57.11,68.62L48.54,70.13ZM52.17,65.92L55.62,65.31C56.8,65.1 57.63,64.72 58.09,64.18C58.55,63.63 58.71,62.97 58.58,62.21C58.48,61.66 58.26,61.19 57.92,60.82C57.58,60.44 57.14,60.17 56.6,60.02C56.07,59.86 55.46,59.85 54.78,59.97L51.23,60.59L52.17,65.92ZM50.72,57.72L53.86,57.17C54.45,57.07 54.94,56.87 55.36,56.59C55.78,56.3 56.09,55.95 56.28,55.52C56.48,55.1 56.53,54.62 56.44,54.09C56.31,53.36 55.95,52.83 55.36,52.47C54.77,52.12 54.01,52.02 53.07,52.19L49.85,52.76L50.72,57.72Z"
+          android:fillColor="#74B9FF"/>
+      <path
+          android:pathData="M72.77,33.95L43.22,28.74C39.96,28.17 36.85,30.35 36.27,33.61L29.33,73C28.75,76.27 30.93,79.38 34.19,79.95L63.74,85.16C67,85.74 70.11,83.56 70.69,80.3L77.63,40.9C78.21,37.64 76.03,34.53 72.77,33.95Z"
+          android:fillColor="#ffffff"/>
+      <path
+          android:pathData="M46.24,63.8L48.89,48.76L53.06,49.5L50.41,64.54L46.24,63.8ZM51.33,47.19C50.71,47.08 50.22,46.78 49.84,46.29C49.48,45.8 49.35,45.26 49.45,44.68C49.55,44.1 49.86,43.65 50.37,43.32C50.89,42.98 51.46,42.86 52.08,42.97C52.7,43.08 53.19,43.38 53.55,43.88C53.92,44.37 54.06,44.9 53.96,45.47C53.85,46.05 53.54,46.51 53.03,46.85C52.52,47.19 51.95,47.3 51.33,47.19ZM53.75,65.13L56.41,50.09L60.58,50.82L57.93,65.86L53.75,65.13ZM58.84,48.52C58.22,48.41 57.73,48.11 57.36,47.62C56.99,47.12 56.86,46.59 56.96,46C57.07,45.43 57.37,44.98 57.88,44.64C58.4,44.3 58.97,44.19 59.59,44.3C60.21,44.41 60.7,44.71 61.06,45.2C61.44,45.69 61.57,46.22 61.47,46.8C61.37,47.38 61.06,47.84 60.54,48.18C60.03,48.51 59.46,48.63 58.84,48.52Z"
+          android:fillColor="#FF7675"/>
+    </group>
+  </group>
 </vector>
